bridge/base/mysql-deployment.yaml
#! mysql-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mysql
    namespace: docker-compose-sql-php
    labels:
        com.docker.compose.project: docker-compose-sql-php
        com.docker.compose.service: mysql
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: docker-compose-sql-php
            com.docker.compose.service: mysql
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: docker-compose-sql-php
                com.docker.compose.service: mysql
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: mysql
                  image: mariadb:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: mysql-3306
                      containerPort: 3306
                  volumeMounts:
                    - name: docker-entrypoint-initdb-d-init-sql
                      mountPath: /docker-entrypoint-initdb.d/init.sql
                    - name: ssl
                      mountPath: /ssl
                    - name: etc-mysql-conf-d
                      mountPath: /etc/mysql/conf.d
            volumes:
                - name: docker-entrypoint-initdb-d-init-sql
                  hostPath:
                    path: C:\Users\jamie\Documents\GitHub\docker-compose-sql-php\init.sql
                - name: ssl
                  persistentVolumeClaim:
                    claimName: mysql-certs
                - name: etc-mysql-conf-d
                  persistentVolumeClaim:
                    claimName: mysql-mysqlconf
