bridge/base/mysql-expose.yaml
#! mysql-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: mysql
    namespace: docker-compose-sql-php
    labels:
        com.docker.compose.project: docker-compose-sql-php
        com.docker.compose.service: mysql
spec:
    selector:
        com.docker.compose.project: docker-compose-sql-php
        com.docker.compose.service: mysql
    ports:
        - name: mysql-3306
          port: 3306
          targetPort: mysql-3306
