bridge/base/phpmyadmin-expose.yaml
#! phpmyadmin-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: phpmyadmin
    namespace: docker-compose-sql-php
    labels:
        com.docker.compose.project: docker-compose-sql-php
        com.docker.compose.service: phpmyadmin
spec:
    selector:
        com.docker.compose.project: docker-compose-sql-php
        com.docker.compose.service: phpmyadmin
    ports:
        - name: phpmyadmin-80
          port: 80
          targetPort: phpmyadmin-80
